<?xml version="1.0" encoding="utf-8"?>
<!--
    activity_game.xml
    Layout for the gameplay screen.

    Note the TableLayout is from stack overflow

    Casey Hird
    C12932552
    crhird@clemson.edu
-->
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:stretchColumns="*">

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="3"
                android:gravity="center"
                android:text="@string/round_label"
                android:id="@+id/round_label"
                style="@style/round_label_style"/>
        </TableRow>
        <TableRow
            android:layout_weight="2"
            android:gravity="center">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:gravity="center"
                android:text="@string/banker_name"
                style="@style/score_title_style"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:gravity="center"
                android:text="@string/winning_score_name"
                style="@style/score_title_style"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:gravity="center"
                android:text="@string/player_name"
                style="@style/score_title_style"/>
        </TableRow>
        <TableRow
            android:layout_weight="4"
            android:gravity="center">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:gravity="center"
                android:text="@string/score_default"
                style="@style/bank_score"
                android:id="@+id/bank_total_text"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:gravity="center"
                android:text="@string/score_default"
                style="@style/winning_score"
                android:id="@+id/target_score_text"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="1"
                android:gravity="center"
                android:text="@string/score_default"
                style="@style/player_score"
                android:id="@+id/player_total_text"/>
        </TableRow>
        <TableRow
            android:layout_weight="14"
            android:gravity="center">
            <TextView
                android:layout_span="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/score_default"
                style="@style/round_score"
                android:id="@+id/round_score_text"/>
            <ImageView
                android:layout_span="2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:contentDescription="@string/dice_description"
                android:id="@+id/die_image"
                android:color="@color/black"
                android:src="@drawable/dice_6" />
        </TableRow>
        <TableRow
            android:layout_weight="2"
            android:gravity="center">

            <Button
                style="@style/game_button_style"
                android:layout_width="379dp"
                android:layout_height="fill_parent"
                android:layout_span="3"
                android:onClick="onBankClick"
                android:text="@string/bank_button" />
        </TableRow>
        <TableRow
            android:layout_weight="2"
            android:gravity="center" >
            <Button
                android:layout_span="3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/roll_again_button"
                style="@style/game_button_style"
                android:onClick="onRollAgainClick"/>
        </TableRow>
    </TableLayout>
